# INFSCI_2710_Project

./: README.md  page_descriptions.txt  pyproject.toml
app/: __init__.py  config.py  errors.py  forms.py  models.py  routes.py  sql_import.sql  user_table_insert.sql
app/static/: shop_helpers.js
app/templates/: 404.html  500.html  admin_home.html  admin_register.html  admin_view.html  base.html  doctor_check_appointments.html  doctor_register.html  doctor_view.html  doctor_write_prescription.html  edit_doctor.html  edit_patient.html  edit_pharmacy.html  edit_plant.html  index.html  login.html  patient_check_appointments.html  patient_create_appointment.html  patient_register.html  patient_view.html  pharmacy_med_purchase.html  pharmacy_register.html  pharmacy_search.html  pharmacy_shipment_history.html  pharmacy_shop.html  pharmacy_shop_browse.html  pharmacy_shopping.html  pharmacy_view.html  plant_add_stock.html  plant_conf.html  plant_edit_stock.html  plant_register.html  plant_remove_stock.html  plant_shipment_history.html  plant_view.html  register.html  remove_doctor.html  remove_patient.html  remove_pharmacy.html  remove_plant.html
sqlDDL/: ddl_statements.sql
