[tool.poetry]
name = "smart_pharm"
version = "0.1.0"
description = "A web application to manage the full pharmaceutical delivery process from plant to patient"
authors = ["Your Name <you@example.com>"]
license = "n"

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^1.1.2"
Werkzeug = "^1.0.1"
Flask-Login = "^0.5.0"
Flask-SQLAlchemy = "^2.4.4"
Flask-Migrate = "^2.5.3"
Flask-MySQL = "^1.5.1"
PyMySQL = "^0.10.1"
mysql-connector-python = "^8.0.22"
mysql-connector = "^2.2.9"
SQLAlchemy = "^1.3.20"
Flask-Sijax = "^0.4.1"
WTForms-Components = "^0.10.4"
WTForms-Alchemy = "^0.17.0"
email-validator = "^1.1.2"
Bootstrap-Flask = "^1.5.1"

[tool.poetry.dev-dependencies]
Flask-WTF = "^0.14.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
